Se modifoco el index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <div class="col">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum temporibus sequi doloribus illum iste expedita!</p>
             </div>
+            <div class="col">
+                <p>Explicando que es git add .</p>
+            </div>
         </div>
     </div>
 </body>
